# static_allocator

./: CMakeLists.txt  README.md  main.cpp  project_info.hpp.in
lib/: CMakeLists.txt  memmanagment.hpp
src/: CMakeLists.txt  main.cpp
tst/: CMakeLists.txt  samples.cpp
